tests/compile-fail/invalid_attribute.stderr
error: Unexpected type for nom attribute content (!LitStr)
 --> tests/compile-fail/invalid_attribute.rs:7:11
  |
7 |     #[nom(Parse=u32)]
  |           ^^^^^

error: Attribute Parse(be_u32) is not valid for top-level
  --> tests/compile-fail/invalid_attribute.rs:12:7
   |
12 | #[nom(Parse = "be_u32")] // ERROR: Attribute Parse(be_u32) is not valid for top-level
   |       ^^^^^

error: Attribute Exact is not valid for field-level
  --> tests/compile-fail/invalid_attribute.rs:19:11
   |
19 |     #[nom(Exact)] // ERROR: Attribute Exact is not valid for field-level
   |           ^^^^^

error: Struct cannot be both big and little endian
  --> tests/compile-fail/invalid_attribute.rs:24:7
   |
24 | #[nom(BigEndian, LittleEndian)] // ERROR: Struct cannot be both big and little endian
   |       ^^^^^^^^^
